--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>Test Custom Element</title>
 </head>
 <body>
+  <!-- Use your custom element tag -->
   <my-audio-rt-element></my-audio-rt-element>
+  
+  <!-- Load the custom element script -->
   <script src="myAudioRealtimeElement.js"></script>
 </body>
 </html>
