--- a/index.html
+++ b/index.html
@@ -2,13 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Test Custom Element</title>
+  <title>Custom Element Test</title>
+  <script src="myAudioRealtimeElement.js"></script>
 </head>
 <body>
-  <!-- Use your custom element tag -->
   <my-audio-rt-element></my-audio-rt-element>
-  
-  <!-- Load the custom element script -->
-  <script src="myAudioRealtimeElement.js"></script>
 </body>
 </html>
